--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
     <link rel="shortcut icon" type="image/png" href="img/favicon.png"/>
 
     <script src="third_party/lighterhtml.js"></script>
+    <script src="third_party/random.js"></script>
     <script type="module" src="js/app.js"></script>
   </head>
   <body></body>
