Add influence subdomain and refactor domain.js and grouping.js

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="third_party/bulma.css">
     <link rel="stylesheet" href="third_party/bulma-checkradio.min.css">
     <link rel="stylesheet" href="css/global.css">
-    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.2/css/all.css" integrity="sha384-oS3vJWv+0UjzBfQzYUhtDYW+Pj2yciDJxpsK1OYPAYjqT085Qq/1cq5FLXAZQ7Ay" crossorigin="anonymous">
+    <link rel="stylesheet" href="third_party/fontawesome.css">
     <link rel="shortcut icon" type="image/png" href="img/favicon.png"/>
 
     <script src="third_party/lighterhtml.js"></script>
