Set up factor page. Clean up SVG arrow code.

--- a/index.html
+++ b/index.html
@@ -7,6 +7,8 @@
     <link rel="stylesheet" href="third_party/bulma.css">
     <link rel="stylesheet" href="third_party/bulma-checkradio.min.css">
     <link rel="stylesheet" href="css/global.css">
+    <link rel="stylesheet" href="css/grid.css">
+    <link rel="stylesheet" href="css/tpe.css">
     <link rel="stylesheet" href="third_party/fontawesome.css">
     <link rel="shortcut icon" type="image/png" href="img/favicon.png"/>
 
