--- a/index.html
+++ b/index.html
@@ -16,5 +16,5 @@
     <script src="third_party/random.js"></script>
     <script type="module" src="js/app.js"></script>
   </head>
-  <body></body>
+  <body class="has-navbar-fixed-top"></body>
 </html>
