--- a/index.html
+++ b/index.html
@@ -4,16 +4,16 @@
     <meta charset="UTF-8">
     <title>Gitarg | Brexit</title>
 
-    <link rel="stylesheet" href="third_party/bulma.css">
-    <link rel="stylesheet" href="third_party/bulma-checkradio.min.css">
-    <link rel="stylesheet" href="css/global.css">
-    <link rel="stylesheet" href="css/diagram.css">
-    <link rel="stylesheet" href="css/tpe.css">
-    <link rel="stylesheet" href="third_party/fontawesome.css">
-    <link rel="shortcut icon" type="image/png" href="img/favicon.png"/>
+    <link rel="stylesheet" href="/third_party/bulma.css">
+    <link rel="stylesheet" href="/third_party/bulma-checkradio.min.css">
+    <link rel="stylesheet" href="/css/global.css">
+    <link rel="stylesheet" href="/css/diagram.css">
+    <link rel="stylesheet" href="/css/tpe.css">
+    <link rel="stylesheet" href="/third_party/fontawesome.css">
+    <link rel="shortcut icon" type="image/png" href="/img/favicon.png"/>
 
-    <script src="third_party/lighterhtml.js"></script>
-    <script type="module" src="js/app.js"></script>
+    <script src="/third_party/lighterhtml.js"></script>
+    <script type="module" src="/js/app.js"></script>
   </head>
   <body class="has-navbar-fixed-top"></body>
 </html>
