Set correct href and document.title.

--- a/client/index.html
+++ b/client/index.html
@@ -2,7 +2,7 @@
 <html>
   <head>
     <meta charset="UTF-8">
-    <title>Gitarg | Brexit</title>
+    <title>Brexit | Gitarg</title>
 
     <link rel="stylesheet" href="/third_party/bulma.css">
     <link rel="stylesheet" href="/third_party/bulma-checkradio.min.css">
