--- a/client/index.html
+++ b/client/index.html
@@ -16,5 +16,8 @@
     <script src="/third_party/lighterhtml.js"></script>
     <script type="module" src="/js/app.js"></script>
   </head>
-  <body class="has-navbar-fixed-top has-navbar-fixed-bottom"></body>
+  <body class="has-navbar-fixed-top has-navbar-fixed-bottom">
+    <div id="App"></div>
+    <div id="disqus_thread"></div>
+  </body>
 </html>
