--- a/client/index.html
+++ b/client/index.html
@@ -2,22 +2,30 @@
 <html>
   <head>
     <meta charset="UTF-8">
-    <title>Brexit | Gitarg</title>
-
+    <title>Welcome! | Gitarg</title>
     <link rel="stylesheet" href="/third_party/bulma.css">
-    <link rel="stylesheet" href="/third_party/bulma-checkradio.min.css">
-    <link rel="stylesheet" href="/css/global.css">
-    <link rel="stylesheet" href="/css/diagram.css">
-    <link rel="stylesheet" href="/css/stats.css">
-    <link rel="stylesheet" href="/third_party/fontawesome.css">
-    <link rel="shortcut icon" type="image/png" href="/img/favicon.png"/>
-
-    <script src="/third_party/js.cookie.js"></script>
-    <script src="/third_party/lighterhtml.js"></script>
-    <script type="module" src="/js/app.js"></script>
+    <link rel="shortcut icon" type="image/png" href="/img/favicon.png">
   </head>
-  <body class="has-navbar-fixed-top has-navbar-fixed-bottom">
-    <div id="App"></div>
-    <div id="disqus_thread"></div>
+  <body>
+    <section class="hero">
+      <div class="hero-body">
+        <div class="container">
+          <h1 class="title">
+            Welcome to Gitarg!
+          </h1>
+          <h2 class="subtitle">
+            Gitarg will help you evaluate Brexit options and see why different people come to different conclusions about it.
+          </h2>
+          <div class="has-text-centered">
+            <a
+              class="button is-primary is-large"
+              href="/diagram/brexit"
+            >
+              Get started!
+            </a>
+          </div>
+        </div>
+      </div>
+    </section>
   </body>
 </html>
