--- a/client/app.html
+++ b/client/app.html
@@ -1,6 +1,14 @@
 <!DOCTYPE html>
 <html>
   <head>
+    <script async src="https://www.googletagmanager.com/gtag/js?id=UA-147529439-1"></script>
+    <script>
+      window.dataLayer = window.dataLayer || [];
+      function gtag(){dataLayer.push(arguments);}
+      gtag('js', new Date());
+      gtag('config', 'UA-147529439-1');
+    </script>
+
     <meta charset="UTF-8">
     <title>Brexit | Gitarg</title>
 
