--- a/client/index.html
+++ b/client/index.html
@@ -1,6 +1,14 @@
 <!DOCTYPE html>
 <html>
   <head>
+    <script async src="https://www.googletagmanager.com/gtag/js?id=UA-147529439-1"></script>
+    <script>
+      window.dataLayer = window.dataLayer || [];
+      function gtag(){dataLayer.push(arguments);}
+      gtag('js', new Date());
+      gtag('config', 'UA-147529439-1');
+    </script>
+
     <meta charset="UTF-8">
     <title>Build a shared understanding of Brexit | Gitarg</title>
     <link rel="stylesheet" href="/third_party/bulma.css">
@@ -13,7 +21,7 @@
         background-image: url('/img/button_bg.png');
         background-repeat: no-repeat;
         background-position: center center;
-        background-size: cover;
+        background-size: contain;
         padding: 95px 0;
       }
       .button-section .button {
@@ -46,7 +54,7 @@
           <div class="tile is-12">
             <div class="tile is-6 is-parent">
               <div class="tile is-child box">
-                <h5 class="title is-5">Contribute your justification of your position</h5>
+                <h5 class="title is-5">Justify your position</h5>
                 <img src="/img/your_justification.png">
               </div>
             </div>
