Improve arguments functionality and overall UI design.

--- a/client/app.html
+++ b/client/app.html
@@ -26,6 +26,6 @@
   </head>
   <body class="has-navbar-fixed-top has-navbar-fixed-bottom">
     <div id="App"></div>
-    <div id="disqus_thread"></div>
+    <div id="disqus_thread" class="section"></div>
   </body>
 </html>
