Add information boxes and tooltips. Make a few UI improvements.

--- a/client/app.html
+++ b/client/app.html
@@ -14,6 +14,7 @@
 
     <link rel="stylesheet" href="/third_party/bulma.css">
     <link rel="stylesheet" href="/third_party/bulma-checkradio.min.css">
+    <link rel="stylesheet" href="/third_party/bulma-tooltip.min.css">
     <link rel="stylesheet" href="/css/global.css">
     <link rel="stylesheet" href="/css/diagram.css">
     <link rel="stylesheet" href="/css/stats.css">
