--- a/client/index.html
+++ b/client/index.html
@@ -31,7 +31,7 @@
         <div class="tile is-ancestor is-vertical">
           <div class="tile is-12 is-parent">
             <div class="tile is-child box">
-              <h5 class="title is-5">Explore an influence diagram connecting numerous factors affected by Brexit</h5>
+              <h5 class="title is-5">Explore the influence diagram connecting numerous factors affected by Brexit</h5>
               <img src="/img/explore_influence_diagram.png">
             </div>
           </div>
