--- a/client/app.html
+++ b/client/app.html
@@ -18,6 +18,7 @@
     <link rel="stylesheet" href="/css/global.css">
     <link rel="stylesheet" href="/css/diagram.css">
     <link rel="stylesheet" href="/css/stats.css">
+    <link rel="stylesheet" href="/css/decision.css">
     <link rel="stylesheet" href="/third_party/fontawesome.css">
     <link rel="shortcut icon" type="image/png" href="/img/favicon.png"/>
 
