--- a/client/app.html
+++ b/client/app.html
@@ -10,6 +10,7 @@
     </script>
 
     <meta charset="UTF-8">
+    <meta name="viewport" content="width=600">
     <title>Brexit | Gitarg</title>
 
     <link rel="stylesheet" href="/third_party/bulma.css">
