--- a/client/index.html
+++ b/client/index.html
@@ -10,6 +10,7 @@
     </script>
 
     <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Build a shared understanding of Brexit | Gitarg</title>
     <link rel="stylesheet" href="/third_party/bulma.css">
     <link rel="shortcut icon" type="image/png" href="/img/favicon.png">
