Redesign the landing page.

--- a/client/app.html
+++ b/client/app.html
@@ -10,8 +10,8 @@
     </script>
 
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=600">
-    <title>Brexit | Gitarg</title>
+    <meta name="viewport" content="width=560">
+    <title>Brexit Diagram</title>
 
     <link rel="stylesheet" href="/third_party/bulma.css">
     <link rel="stylesheet" href="/third_party/bulma-checkradio.min.css">
