--- a/client/index.html
+++ b/client/index.html
@@ -11,61 +11,73 @@
 
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>Build a shared understanding of Brexit | Gitarg</title>
+    <title>Build a shared understanding of Brexit</title>
     <link rel="stylesheet" href="/third_party/bulma.css">
     <link rel="shortcut icon" type="image/png" href="/img/favicon.png">
     <style>
-      h2.title.main-title {
-        margin-bottom: 45px;
+      .column .img_cont {
+        height: 120px;
+        text-align: center;
+        vertical-align: middle;
       }
-      #get-started {
-        margin-top: 20px;
+      .column .img_cont img {
+        max-height: 100%;
+      }
+      .column .title {
+        margin-top: 25px;
+        text-align: center;
       }
     </style>
   </head>
   <body>
-    <section class="section has-text-centered">
-      <h2 class="title main-title is-2">
-        Build a shared understanding of Brexit
-      </h2>
-      <div calss="container" style="max-width: 960px; margin: 0 auto;">
-        <div class="tile is-ancestor is-vertical">
-          <div class="tile is-12 is-parent">
-            <div class="tile is-child box">
-              <h5 class="title is-5">Explore the influence diagram connecting numerous factors affected by Brexit</h5>
-              <img src="/img/explore_influence_diagram.png">
+    <section class="hero is-medium is-primary is-bold">
+      <div class="hero-body">
+        <div class="container">
+          <h1 class="title">
+            Build a shared understanding of Brexit
+          </h1>
+          <h2 class="subtitle">
+            Detect core differences. Find common ground. Move forward.
+          </h2>
+        </div>
+      </div>
+    </section>
+    <section class="section">
+      <div class="container">
+        <div class="columns">
+          <div class="column">
+            <div class="img_cont">
+              <img src="/img/chart.png">
+            </div>
+            <h5 class="title is-5">Influence diagram of Brexit</h5>
+            <div>
+              Explore a diagram connecting a comprehnsive list of Brexit decisions, factors an values. View statistics about oppinions of others to understand which disagreements are the most important and how they lead to different conclusions.
             </div>
           </div>
-          <div class="tile is-12">
-            <div class="tile is-6 is-parent">
-              <div class="tile is-child box">
-                <h5 class="title is-5">Justify your position</h5>
-                <img src="/img/your_justification.png">
-              </div>
+          <div class="column">
+            <div class="img_cont">
+              <img src="/img/sliders.png">
             </div>
-            <div class="tile is-6 is-parent">
-              <div class="tile is-child box">
-                <h5 class="title is-5">Get a personalised recommendation</h5>
-                <img src="/img/recommendation.png">
-              </div>
+            <h5 class="title is-5">Share your views and reasons</h5>
+            <div>
+              Express your oppinion about the extent to wich Brexit factors influence one another and about how much they should be valued. You can submit arguments about why the effect or importance of a factor should be rated higher or lower to influence oppinions of others.
             </div>
           </div>
-          <div class="tile is-12">
-            <div class="tile is-6 is-parent">
-              <div class="tile is-child box">
-                <h5 class="title is-5">Discover common ground and core differences with others</h5>
-                <img src="/img/core_differences.png">
-              </div>
+          <div class="column">
+            <div class="img_cont">
+              <img src="/img/decision.png">
             </div>
-            <div class="tile is-6 is-parent">
-              <div class="tile is-child box">
-                <h5 class="title is-5">Contribute missing arguments</h5>
-                <img src="/img/contribute_arguments.png">
-              </div>
+            <h5 class="title is-5">Get a personalised recommendation</h5>
+            <div>
+              Based on your oppinions our algorithm will calculate the total value of each of the Brexit options and reccommed the best one. It makes as few assumptions as possible leaving the choice to you.
             </div>
           </div>
         </div>
-        <a id="get-started" class="button is-success is-large" href="/diagram/brexit" >
+      </div>
+    </section>
+    <section class="section">
+      <div class="container has-text-centered">
+        <a class="button is-primary is-large" href="/diagram/brexit" >
           Get started!
         </a>
       </div>
