Improve cross-browser compatibility and mobile experience.

--- a/client/app.html
+++ b/client/app.html
@@ -10,7 +10,7 @@
     </script>
 
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=560">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Brexit Diagram</title>
 
     <link rel="stylesheet" href="/third_party/bulma.css">
