Fix spelling mistakes.

--- a/client/index.html
+++ b/client/index.html
@@ -37,7 +37,7 @@
             Build a shared understanding of Brexit
           </h1>
           <h2 class="subtitle">
-            Detect core differences. Find common ground. Move forward.
+            Identify core differences. Find common ground. Move forward.
           </h2>
         </div>
       </div>
@@ -51,7 +51,7 @@
             </div>
             <h5 class="title is-5">Influence diagram of Brexit</h5>
             <div>
-              Explore a diagram connecting a comprehnsive list of Brexit decisions, factors an values. View statistics about oppinions of others to understand which disagreements are the most important and how they lead to different conclusions.
+              Explore a diagram connecting a comprehensive list of Brexit decisions, factors and values. View statistics about opinions of others to understand which disagreements are the most important and how they lead to different conclusions.
             </div>
           </div>
           <div class="column">
@@ -60,7 +60,7 @@
             </div>
             <h5 class="title is-5">Share your views and reasons</h5>
             <div>
-              Express your oppinion about the extent to wich Brexit factors influence one another and about how much they should be valued. You can submit arguments about why the effect or importance of a factor should be rated higher or lower to influence oppinions of others.
+              Express your opinion about the extent to which Brexit factors influence one another and about how much they should be valued. In order to influence opinions of others you can argue why the effect or importance of a factor should be rated higher or lower.
             </div>
           </div>
           <div class="column">
@@ -69,7 +69,7 @@
             </div>
             <h5 class="title is-5">Get a personalised recommendation</h5>
             <div>
-              Based on your oppinions our algorithm will calculate the total value of each of the Brexit options and reccommed the best one. It makes as few assumptions as possible leaving the choice to you.
+              Based on your opinions our algorithm will calculate the total value of each of the Brexit options and recommend the best one. It makes as few assumptions as possible leaving the choice to you.
             </div>
           </div>
         </div>
