--- a/client/index.html
+++ b/client/index.html
@@ -11,7 +11,7 @@
 
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>Build a shared understanding of Brexit</title>
+    <title>Double-check your stance on Brexit</title>
     <link rel="stylesheet" href="/third_party/bulma.css">
     <link rel="shortcut icon" type="image/png" href="/img/favicon.png">
     <style>
@@ -33,11 +33,14 @@
     <section class="hero is-medium is-primary is-bold">
       <div class="hero-body">
         <div class="container">
+          <h2 id="s1" class="subtitle">
+            Only <span id="days_text">a few</span> days until the UK General Election
+          </h2>
           <h1 class="title">
-            Build a shared understanding of Brexit
+            Double-check your stance on Brexit
           </h1>
-          <h2 class="subtitle">
-            Identify core differences. Find common ground. Move forward.
+          <h2 id="s2" class="subtitle">
+            Your vote will influence its outcome
           </h2>
         </div>
       </div>
@@ -82,5 +85,18 @@
         </a>
       </div>
     </section>
+    <script>
+      const geTime = (new Date(2019, 11, 12)).getTime()
+      const now = (new Date()).getTime()
+      const days = Math.ceil((geTime - now) / (1000 * 60 * 60 * 24))
+      if (days > 1) {
+        document.getElementById('days_text').innerHTML = days
+      } else if (days > -1) {
+        document.getElementById('s1').remove()
+      } else {
+        document.getElementById('s1').remove()
+        document.getElementById('s2').remove()
+      }
+    </script>
   </body>
 </html>
